--- a/Linear_Regression_by_DmitriySC.ipynb
+++ b/Linear_Regression_by_DmitriySC.ipynb
@@ -11,16 +11,14 @@
   {
    "cell_type": "markdown",
    "id": "4f2ad487-3ce8-48f4-b854-5629f78341e3",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Step 1 Data Selection and Cleaning:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "e8de8655-72ef-4e75-ac4b-a52249c2e410",
    "metadata": {},
    "outputs": [
@@ -35,7 +33,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "fad6094f-0683-497d-9b77-a422212276c1",
    "metadata": {},
    "outputs": [
@@ -103,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "e6d2595e-50ce-4b73-8dc3-180fc09a4829",
    "metadata": {},
    "outputs": [
@@ -166,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "b4eda7fe-beee-4431-ae53-dd3d01e3d0b7",
    "metadata": {},
    "outputs": [],
@@ -196,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "id": "b1a82d81-48d9-4a40-9e06-4a7a287300ae",
    "metadata": {},
    "outputs": [],
@@ -221,14 +219,16 @@
    "id": "24da6c9a-e739-4b0b-ba67-e2f1590a3949",
    "metadata": {},
    "source": [
-    "## SModel Evaluation & Visualization"
+    "## Step 4 Model Evaluation & Visualization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "id": "2b652093-daeb-47aa-a2e1-f4a791974617",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -249,6 +249,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction 1: $553,559.86\n",
+      "Prediction 2: $849,749.09\n"
+     ]
     }
    ],
    "source": [
@@ -282,7 +290,25 @@
     "plt.ylabel('SalePrice')\n",
     "plt.title('Linear Regression: SqFtTotLiving vs SalePrice')\n",
     "plt.legend()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "cols = model.feature_names_in_\n",
+    "\n",
+    "# 2) Start from training medians (reasonable defaults), then override your custom values\n",
+    "base = X_train.median(numeric_only=True).to_dict()\n",
+    "\n",
+    "row1 = base.copy(); row1.update({'SqFtTotLiving': 2000, 'HouseAge': 20})\n",
+    "row2 = base.copy(); row2.update({'SqFtTotLiving': 3500, 'HouseAge': 5})\n",
+    "\n",
+    "# 3) Create the prediction frame with the correct columns/order\n",
+    "custom_values = pd.DataFrame([row1, row2]).reindex(columns=cols)\n",
+    "\n",
+    "# 4) Predict\n",
+    "custom_predictions = model.predict(custom_values)\n",
+    "\n",
+    "for i, price in enumerate(custom_predictions, 1):\n",
+    "    print(f\"Prediction {i}: ${price:,.2f}\")"
    ]
   },
   {
